# socow-vector

./: .clang-format  CMakeLists.txt  README.md  socow-vector.h  tests.cpp
.github/workflows/: cpp.yml
ci-extra/: test-valgrind.sh
